[gd_scene load_steps=18 format=3 uid="uid://c16aelv8g37ck"]

[ext_resource type="Script" path="res://shared/sophie_character_controller/sophie_character_controller.gd" id="1_rvo1c"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="2_uc6c5"]
[ext_resource type="PackedScene" uid="uid://dgvq4io2wgwv" path="res://shared/models/sophia/sophia_skin.tscn" id="4_i7dnh"]
[ext_resource type="Script" path="res://addons/cardboard_vr/scripts/cardboard_vr_camera.gd" id="5_1w5yw"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://meshes/dust.res" id="5_uc6c5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4it54"]
height = 1.6

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_0gixm"]
length = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[sub_resource type="Gradient" id="Gradient_4qby2"]
colors = PackedColorArray(1, 1, 1, 1, 0.991164, 0.991164, 0.991164, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ahyk3"]
gradient = SubResource("Gradient_4qby2")

[sub_resource type="Curve" id="Curve_o6s0e"]
_data = [Vector2(0, 0.418182), 0.0, 0.816529, 0, 0, Vector2(1, 1), 0.606652, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tigny"]
curve = SubResource("Curve_o6s0e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ws674"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 2, 0)
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_tigny")
color_ramp = SubResource("GradientTexture1D_ahyk3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5x50"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.917647, 0.917647, 0.917647, 1)
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_c5lqg"]
material = SubResource("StandardMaterial3D_x5x50")
size = Vector2(0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u7vxd"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_i5obr"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="SophieCharacterController" type="CharacterBody3D" groups=["player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 0.2
script = ExtResource("1_rvo1c")

[node name="StepSounds" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_uc6c5")
attenuation_model = 3
volume_db = -5.0
unit_size = 1.0
pitch_scale = 1.25
autoplay = true

[node name="CapsuleCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_4it54")

[node name="RayCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.3, 0)
shape = SubResource("SeparationRayShape3D_0gixm")

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.978282, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.4, 0)
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("4_i7dnh")]
unique_name_in_owner = true
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)

[node name="FloorSlideParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
cast_shadow = 0
emitting = false
amount = 2
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_ws674")
draw_pass_1 = SubResource("QuadMesh_c5lqg")

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_u7vxd")
cast_shadow = 0
amount = 60
mesh = ExtResource("5_uc6c5")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_i5obr")

[node name="CardboardVRCamera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.47687, 0.387689)
script = ExtResource("5_1w5yw")
